# FTB

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  License  QUICK_CONFIG.md  README.md  README_CN.md  Release_notes.md  build.sh  cmake_uninstall.cmake.in  docker-compose.yml  plan.md
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  other.yml
.github/workflows/: Release.yml
.mimocode/plans/: 1782357054582-shiny-moon.md  1782372633320-tidy-panda.md  1782385503974-silent-sailor.md
bash_tool/: build.sh  package_build.sh  uninstall.sh
config/: .ftb.template  noavilable.json  weather_config.yaml
data/: Get_weather_information.py  weather.json
docs/: CONFIGURATION.md  CONFIGURATION_CN.md  DOCKER.md  DOCKER_CN.md  KEYBOARD_SHORTCUTS.md  KEYBOARD_SHORTCUTS_CN.md  PLUGINS.md  PLUGINS_CN.md  PREREQUISITES.md  PREREQUISITES_CN.md  PROJECT_STRUCTURE.md
include/: FileManager.hpp  ThreadGuard.hpp  UIManager.hpp  event_handler.hpp  file_browser.hpp  file_operations.hpp  new_file_dialog.hpp  thread_guard.hpp  ui_initializer.hpp
include/Connection/: MySQLConnection.hpp  SSHConnection.hpp
include/FTB/: ArchivePreview.hpp  BinaryFileHandler.hpp  CLIArgs.hpp  ClipboardManager.hpp  ConfigManager.hpp  DirectoryHistory.hpp  FileManager.hpp  FileSizeCalculator.hpp  IconMapper.hpp  KeyBindings.hpp  LRUCache.hpp  MainUI.hpp  NetworkService.hpp  ObjectPool.hpp  Powerline.hpp  SortMode.hpp  StatusMessage.hpp  SystemClipboard.hpp  SystemInfoCollector.hpp  TextSelection.hpp  ThemeManager.hpp  UIManager.hpp  Vim_Like.hpp  WeatherDisplay.hpp  WeatherService.hpp  detail_element.hpp
include/UI/: CalendarPanel.hpp  DeleteDialog.hpp  FilePreviewDialog.hpp  FolderDetailsDialog.hpp  FuzzyFinderDialog.hpp  HelpDialog.hpp  JumpDirectoryDialog.hpp  JumpFileContextDialog.hpp  LayoutPanel.hpp  MySQLDialog.hpp  NetworkServiceDialog.hpp  NewFileDialog.hpp  NewFolderDialog.hpp  PluginDialog.hpp  RenameDialog.hpp  SSHDialog.hpp  SortDialog.hpp  SystemInfoDialog.hpp  ThemeDialog.hpp  UIStylePanel.hpp
include/Video_and_Photo/: CommonMedia.hpp  FFmpegUtils.hpp  ImageViewer.hpp  VideoPlayer.hpp
include/ai/: AIAgent.hpp  AIClient.hpp  ActionExecutor.hpp  ContextBuilder.hpp  MemoryManager.hpp  ResponseRouter.hpp  SessionManager.hpp  ToolRegistry.hpp
include/browser/: AsyncFileManager.hpp  BinaryFileHandler.hpp  ClipboardManager.hpp  FileManager.hpp  SortMode.hpp  TaskSystem.hpp
include/config/: CLIArgs.hpp  ConfigManager.hpp  DefaultExtensionColors.hpp  KeyBindings.hpp  ThemeManager.hpp  ThreadGuard.hpp
include/core/: AnsiParser.hpp  FuzzyFinder.hpp  JumpFileContext.hpp  MainUI.hpp  TabManager.hpp
include/dialog/: AIConfigDialog.hpp  AIDialog.hpp  BatchRenameDialog.hpp  CalendarPanel.hpp  ClipboardDialog.hpp  DeleteDialog.hpp  EditorPanel.hpp  FilePreviewDialog.hpp  FolderDetailsDialog.hpp  FuzzyFinderDialog.hpp  HelpDialog.hpp  HexEditorPanel.hpp  ImagePreviewPanel.hpp  JumpDirectoryDialog.hpp  LayoutPanel.hpp  NewFileDialog.hpp  NewFolderDialog.hpp  NewTabDialog.hpp  OpenerConfigDialog.hpp  OpenerInputDialog.hpp  OpenerPickerDialog.hpp  PluginDialog.hpp  RenameDialog.hpp  SSHDialog.hpp  SortDialog.hpp  TabBarRenderer.hpp  TaskPanelDialog.hpp  ThemeDialog.hpp  UIStylePanel.hpp
include/editor/: MD_transformer.hpp  NanoEditor.hpp  SyntaxHighlighter.hpp  SyntaxHighlighterTreeSitter.hpp
include/ops/: ArchiveOps.hpp  EventHandler.hpp  OpenerManager.hpp  PluginManager.hpp
include/preview/: AudioPreview.hpp  DocPreview.hpp  HexPreview.hpp  ImagePreview.hpp  MarkdownPreview.hpp  MediaPreview.hpp  PdfPreview.hpp  PreviewCache.hpp  SpreadsheetPreview.hpp
include/protocols/: ITerm2Protocol.hpp  ImageOutputManager.hpp  KittyProtocol.hpp  SixelProtocol.hpp  TerminalImageProtocol.hpp  base64_util.hpp
include/remote/: SSHConnection.hpp
include/renderer/: TextSelection.hpp  detail_element.hpp
include/utils/: FilesystemUtil.hpp  GifFrameDecoder.hpp  LRUCache.hpp  PerfLogger.hpp  TerminalProbe.hpp  TmuxContext.hpp  UnicodeUtil.hpp  WebpDecoder.hpp
plugins/file-info.ftb/: main.ts  package.json
plugins/git-status.ftb/: main.ts  package.json
plugins/hello-world.ftb/: main.ts  package.json
plugins/os-icon.ftb/: main.ts  package.json
plugins/preview-external.ftb/: _common.py  _table.py  archive_parser.py  data_parser.py  dl_parser.py  font_parser.py  main.ts  mp3_parser.py  package.json  package_parser.py
plugins/sysinfo.ftb/: main.ts  package.json
src/: ClipboardManager.cpp  DirectoryHistory.cpp  FileManager.cpp  FileSizeCalculator.cpp  ThreadGuard.cpp  UIManager.cpp  Vim_Like.cpp  event_handler.cpp  file_browser.cpp  file_operations.cpp  main.cpp  new_file_dialog.cpp  thread_guard.cpp  ui_initializer.cpp
src/Connection/: MySQLConnection.cpp  SSHConnection.cpp
src/FTB/: ArchivePreview.cpp  AsyncFileManager.cpp  BinaryFileHandler.cpp  CLIArgs.cpp  ClipboardManager.cpp  ConfigManager.cpp  DirectoryHistory.cpp  FileManager.cpp  FileSizeCalculator.cpp  FuzzyFinder.cpp  IconMapper.cpp  ImagePreview.cpp  JumpFileContext.cpp  KeyBindings.cpp  MainUI.cpp  NetworkService.cpp  ObjectPool.cpp  PluginManager.cpp  Powerline.cpp  SortMode.cpp  SystemInfoCollector.cpp  TextSelection.cpp  ThemeManager.cpp  ThreadGuard.cpp  Vim_Like.cpp  WeatherDisplay.cpp  WeatherService.cpp  detail_element.cpp  main.cpp
src/UI/: CalendarPanel.cpp  DeleteDialog.cpp  FilePreviewDialog.cpp  FolderDetailsDialog.cpp  FuzzyFinderDialog.cpp  HelpDialog.cpp  JumpDirectoryDialog.cpp  JumpFileContextDialog.cpp  LayoutPanel.cpp  MySQLDialog.cpp  NetworkServiceDialog.cpp  NewFileDialog.cpp  NewFolderDialog.cpp  PluginDialog.cpp  RenameDialog.cpp  SSHDialog.cpp  SortDialog.cpp  SystemInfoDialog.cpp  ThemeDialog.cpp  UIStylePanel.cpp
src/Video_and_Photo/: CommonMedia.cpp  FFmpegUtils.cpp  ImageViewer.cpp  VideoPlayer.cpp
src/ai/: AIAgent.cpp  AIClient.cpp  ActionExecutor.cpp  ActionExecutor_Advanced.cpp  ActionExecutor_Batch.cpp  ContextBuilder.cpp  (+8 more)
tests/: CMakeLists.txt  FileManagerTest.cpp  FileSizeCaculatorTest.cpp  UIManagerTest.cpp  Vim_like_Test.cpp
(+108 files in other folders)
